# python-consortium

./: COPYING  ChangeLog  Makefile.am  Makefile.in  NEWS  aclocal.m4  config.h.in~  configure  configure.ac  gnome-python-desktop-2.0.pc
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
consortium/: Makefile.am  Makefile.in  consortium.defs  consortium.override  consortiummodule.c
debian/: autoreconf.after  autoreconf.before  changelog  control  control.in  files  python-consortium.substvars  python-evolution.install
debian/patches/: series
debian/python-consortium/DEBIAN/: control  md5sums
debian/python-consortium/usr/lib/python2.7/dist-packages/gtk-2.0/: consortium.la
debian/python-consortium/usr/share/doc/python-consortium/: README  copyright
